crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled/snapshots/query - script cache false does not affect expanded synthetic cache.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&err_str"
info:
  args:
    - run
    - run-build-cache-false
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled
---
Failed to plan tasks from `vt run build` in task @test/synthetic-cache-disabled#run-build-cache-false: Invalid vite task command: vt with args ["lint"] under cwd "<workspace>/": cannot find binary path
