crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled/snapshots/query - task passThroughEnvs inherited by synthetic.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled
---
{
  "root_node": {
    "Expanded": [
      {
        "key": [
          "<workspace>/",
          "lint-with-pass-through-envs"
        ],
        "node": {
          "task_display": {
            "package_name": "@test/synthetic-cache-disabled",
            "task_name": "lint-with-pass-through-envs",
            "package_path": "<workspace>/"
          },
          "items": [
            {
              "execution_item_display": {
                "task_display": {
                  "package_name": "@test/synthetic-cache-disabled",
                  "task_name": "lint-with-pass-through-envs",
                  "package_path": "<workspace>/"
                },
                "command": "vp lint",
                "and_item_index": null,
                "cwd": "<workspace>/"
              },
              "kind": {
                "Leaf": {
                  "Spawn": {
                    "cache_metadata": {
                      "spawn_fingerprint": {
                        "cwd": "",
                        "program_fingerprint": {
                          "OutsideWorkspace": {
                            "program_name": "oxlint"
                          }
                        },
                        "args": [],
                        "env_fingerprints": {
                          "fingerprinted_envs": {},
                          "pass_through_env_config": [
                            "CUSTOM_VAR",
                            "<default pass-through envs>"
                          ]
                        },
                        "fingerprint_ignores": null
                      },
                      "execution_cache_key": {
                        "UserTask": {
                          "task_name": "lint-with-pass-through-envs",
                          "and_item_index": 0,
                          "extra_args": [],
                          "package_path": ""
                        }
                      }
                    },
                    "spawn_command": {
                      "program_path": "<tools>/node_modules/.bin/oxlint",
                      "args": [],
                      "all_envs": {
                        "NO_COLOR": "1",
                        "PATH": "<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
                      },
                      "cwd": "<workspace>/"
                    }
                  }
                }
              }
            }
          ]
        },
        "neighbors": []
      }
    ]
  }
}
