crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled/snapshots/query - task untrackedEnv inherited by synthetic.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&err_str"
info:
  args:
    - run
    - lint-with-untracked-env
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled
---
Invalid vite task command: vt with args ["lint"] under cwd "<workspace>/": cannot find binary path
