crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled/snapshots/query - task with cache true enables synthetic cache.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: err_str.as_ref()
info:
  args:
    - run
    - lint-with-cache
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/synthetic-cache-disabled
---
Invalid vite task command: vt with args ["lint"] under cwd "<workspace>/": cannot find binary path
